ci: Use ccache to speed up repeated builds
Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit d0728fd06e5a2302e7596e3df56b68b0a0834fd7)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,16 @@ stages:
 
 before_script:
   - ./tools/ci-install.sh
+  - mkdir -p .ccache
+  - export CCACHE_BASEDIR="$(pwd)"
+  - export CCACHE_DIR="$CCACHE_BASEDIR/.ccache"
+  # Debian's ccache package creates symlinks here for all supported
+  # compilers
+  - export PATH="/usr/lib/ccache:$PATH"
+
+cache:
+  paths:
+    - .ccache/
 
 variables:
   ci_in_docker: "yes"
