ci: Mark many Gitlab jobs to be run manually
freedesktop.org Gitlab doesn't currently have enough test runners
available to run all of this every time. For higher-risk changes
(for example those that change the build system) we can run the
complete set through the web UI.

Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit a2f416c2896062755c285f2d1fe4a2dc03455aa1)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ build:debug:
 
 build:reduced:
   stage: build
+  when: manual
   image: "debian:stretch-slim"
   variables:
     ci_variant: "reduced"
@@ -70,6 +71,7 @@ build:reduced:
 
 build:legacy:
   stage: build
+  when: manual
   image: "debian:stretch-slim"
   variables:
     ci_variant: "legacy"
@@ -92,6 +94,7 @@ build:i686-w64-mingw32-debug:
 
 build:i686-w64-mingw32-cmake:
   stage: build
+  when: manual
   image: "debian:stretch-slim"
   variables:
     ci_buildsys: "cmake"
@@ -107,6 +110,7 @@ build:x86_64-w64-mingw32:
 
 build:x86_64-w64-mingw32-cmake-debug:
   stage: build
+  when: manual
   image: "debian:stretch-slim"
   variables:
     ci_buildsys: "cmake"
@@ -115,6 +119,7 @@ build:x86_64-w64-mingw32-cmake-debug:
   script: *script
 
 build:jessie:
+  when: manual
   stage: build
   image: "debian:jessie-slim"
   variables:
@@ -122,6 +127,7 @@ build:jessie:
   script: *script
 
 build:xenial:
+  when: manual
   stage: build
   image: "ubuntu:xenial"
   variables:
@@ -130,6 +136,7 @@ build:xenial:
   script: *script
 
 build:trusty:
+  when: manual
   stage: build
   image: "ubuntu:trusty"
   variables:
