--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ cmakeconfig_DATA = cmake/DBus1Config.cmake       \
 
 EXTRA_DIST =			\
 	autogen.sh		\
-	CONTRIBUTING		\
+	CONTRIBUTING.md		\
 	dbus-1.pc.in		\
 	cleanup-man-pages.sh    \
         NEWS.pre-1-0            \
