Use same name for DBUS_HAVE_LINUX_EPOLL cpp macro and Automake conditional
Reviewed-by: Simon McVittie <smcv@collabora.com>
Bug: https://gitlab.freedesktop.org/dbus/dbus/merge_requests/18

--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -120,7 +120,7 @@ DBUS_UTIL_arch_sources = 			\
 	$(NULL)
 endif
 
-if HAVE_LINUX_EPOLL
+if DBUS_HAVE_LINUX_EPOLL
 DBUS_UTIL_arch_sources += dbus-socket-set-epoll.c
 endif
 
