Avoid double slashes in paths created by pkg-config
If in a .pc variable a path is created from another
variable, such as exec_prefix=${prefix}/lib, prefix
must not contain a trailing slash to avoid double
slashes in the generated path.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -671,7 +671,7 @@ if(UNIX)
         endforeach()
         set(original_prefix "${CMAKE_INSTALL_PREFIX}")
         if(DBUS_RELOCATABLE)
-            set(pkgconfig_prefix "\${pcfiledir}/../../")
+            set(pkgconfig_prefix "\${pcfiledir}/../..")
         else()
             set(pkgconfig_prefix "\${original_prefix}")
         endif()
