tests: Add a unit test for _dbus_command_for_pid()
In particular this demonstrates that dbus#222 has been solved.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -108,6 +108,9 @@ test_refs_LDADD = libdbus-testutils.la $(GLIB_LIBS)
 test_server_oom_SOURCES = internals/server-oom.c
 test_server_oom_LDADD = libdbus-testutils.la $(GLIB_LIBS)
 
+test_sysdeps_SOURCES = internals/sysdeps.c
+test_sysdeps_LDADD =  libdbus-testutils.la $(GLIB_LIBS)
+
 test_syslog_SOURCES = internals/syslog.c
 test_syslog_LDADD = libdbus-testutils.la $(GLIB_LIBS)
 
@@ -172,6 +175,7 @@ installable_tests += \
 	test-relay \
 	test-server-oom \
 	test-syntax \
+	test-sysdeps \
 	test-syslog \
 	test-uid-permissions \
 	test-variant \
